# taipy

./: .gitignore  makefile  pyproject.toml  readme.md
src/: app.py  login.md  parameters.md
