[tool.poetry]
name = "index-toolbox"
version = "0.1.0"
description = "A toolbox to handle different financial index problem"
authors = ["Jake Chin <jakechin.mk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
taipy = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
